--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   },
     "repository": {
     "type": "git",
-    "url": "https://github.com/IBM-Bluemix/bluemix-hello-node.git"
+    "url": "https://github.com/RenanC4/PigGame.git"
   }
 }
